# tinyscript

./: CMakeLists.txt  LICENSE  README.md  demo.tiny  test.tiny  test.tinyscript  tinyscript.ebnf
include/tinyscript/: opcodes.hpp  type.hpp  x-opcodes.hpp
include/tinyscript/compiler/: codegen.hpp  compiler.hpp  ilbuilder.hpp  scanner.hpp  selector.hpp  sema.hpp  sourcemanager.hpp  token.hpp  typeexpr.hpp  utf8.hpp
include/tinyscript/runtime/: library.hpp  module.hpp  program.hpp  task.hpp  value.hpp  vm.hpp
lib/: CMakeLists.txt
lib/compiler/: codegen.cpp  compiler.cpp  ilbuilder.cpp  recognizers.cpp  scanner.cpp  selector.cpp  sema.cpp  sourcemanager.cpp  token.cpp  utf8.cpp
lib/runtime/: library.cpp  module.cpp  opcodes.cpp  task.cpp  vm.cpp
